--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <input id="gifItButton" type="submit" value="GIF it up!">
     </form>
 
-	<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="assets/javascript/logic.js"></script>
 
 
